# declare

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: color.py
src/declare/: __init__.py  _declare.py
tests/: test_declare.py
